# RespAnno

./: .coverage  .gitignore  1.0.0.py  1.6.6.py  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_OUTLINE.md  README.md  RespAnno.spec  SoftX_code_structure_audit.md  SoftX_package_gap_report.md  SoftX_user_required_edits.md  TEST_RELIABILITY_REPORT.md  _all_comments_table.txt  _scan_comments.py  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test.yml
demo_data/4000Hz/: 001_example.csv  002_example.csv  003_example.csv
demo_data/events/: 001_events.csv  103_2b2_Ar_mc_.csv  103_2b2_Ar_mc_LittC2SE_events.csv  130_1p3_Ll_mc_AKGC417L_events.csv
docs/: software_architecture.md  testing.md  user_guide_outline.md  windows_gui_test_plan.md  windows_manual_test_record_template.md
examples/: REAL_DATA_EVAL_RESULTS.md  real_data_eval.py  visualize_demo.py  workflow_demo.py
legacy/: 1.6.6.py
respanno/: __init__.py  main.py
respanno/audio/: preprocessing.py
respanno/dsp/: features.py  fft.py  spectrogram.py
respanno/gui/dialogs/: annotation_label_dialog.py  loop_player.py  settings_dialog.py
respanno/gui/spans/: box_span.py  span_label_item.py
respanno/gui/views/: annot_view_box.py  wave_view_box.py
respanno/gui/widgets/: clickable_slider.py  color_bar.py  color_check_delegate.py
respanno/labels/: annotation_io.py  events_importer.py
respanno/ml/: classifier.py  frame_labels.py  hsmm.py  label_taxonomy.py  negatives.py  phase_model.py  service.py
scripts/: _apply_translations.py  _check_remaining.py  _count_cn.py  _find_chinese.py  _rename_166_to_100.py  _show_cn_comments.py  _spot_check.py  _translate_comments.py  _translate_data_safe.py  _translate_final.py  _translate_onepass.py  _translate_pass2.py  _translate_v2.py  functional_test.py  ml_demo.py  repro_check.py
tests/: conftest.py  test_annotation_quality.py  test_annotation_roundtrip.py  test_classifier_apply_basic.py  test_classifier_training_basic.py  test_e2e_ml_pipeline.py  test_events_importer_basic.py  test_features_basic.py  test_fft_basic.py  test_frame_labels_basic.py  test_gui_static_integration.py  test_gui_widgets_headless.py  test_hsmm_basic.py  test_icbhi_compatibility.py  test_label_taxonomy_basic.py  test_ml_service_basic.py  test_module_imports.py  test_negatives_basic.py  test_performance_baseline.py  test_phase_apply_basic.py  test_phase_model_basic.py  test_preprocessing_basic.py  test_reproducibility.py  test_roundtrip_workflow.py  test_spectrogram_basic.py
tests/fixtures/: mock_viewer.py  synthetic_signals.py
tests/fixtures/annotations/: bad_rows.csv  icbhi_style.csv  simple_5rows.csv  simple_5rows.json  simple_5rows_tab.txt  with_source_col.csv
tests/老版本测试/: 1.6.5.py
