[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "respanno"
version = "1.0.0"
description = "Respiratory Sound Annotation Tool with ML-assisted labeling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Chaoyue Pan", email = "13145342435@163.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "librosa>=0.9",
    "pyqtgraph>=0.13",
    "PyQt5>=5.15",
    "sounddevice>=0.4",
    "scikit-learn>=1.0",
    "lightgbm>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-qt>=4",
    "pytest-cov>=4",
    "pytest-timeout>=2",
]

[project.scripts]
respanno = "respanno.main:main"

[tool.setuptools.packages.find]
include = ["respanno*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
timeout = 300
markers = [
    "slow: tests that take more than 10 seconds",
    "gui: tests that require a display (PyQt5)",
    "e2e: end-to-end ML pipeline tests",
    "perf: performance baseline tests (report-only by default)",
]
filterwarnings = [
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["respanno"]
omit = ["respanno/gui/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
